separate dev containers

--- a/backend/.devcontainer/devcontainer.json
+++ b/backend/.devcontainer/devcontainer.json
@@ -5,9 +5,5 @@
 
   "service": "backend",
 
-  "workspaceFolder": "/app/backend",
-
-  "features": {
-    "ghcr.io/devcontainers/features/git:1": {}
-  }
+  "workspaceFolder": "/backend"
 }
