--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "NODE_ENV=test && mocha --recursive --exit",
+    "start": "nodemon index.js",
+    "lint": "eslint .  --ext .js",
+    "lint-fix": "eslint --fix .  --ext .js"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,15 @@
     "express": "^4.17.1",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.13"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.34.0",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3"
+  },
+  "optionalDependencies": {
+    "win-node-env": "^0.6.1"
   }
 }
