--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test && mocha --recursive --exit",
     "start": "nodemon index.js",
     "lint": "eslint .  --ext .js",
-    "lint-fix": "eslint --fix .  --ext .js"
+    "lint-fix": "eslint --fix .  --ext .js",
+    "validate": "npm-run-all --parallel format lint"
   },
   "keywords": [],
   "author": "",
