--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "mocha": "^10.2.0",
+    "npm-run-all": "4.1.5",
     "supertest": "^6.3.3"
   },
   "optionalDependencies": {
