--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,8 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
     "eslint-config-google": "^0.14.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-node": "11.1.0",
     "mocha": "^10.2.0",
     "npm-run-all": "4.1.5",
     "prettier": "2.8.4",
