--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "mongodb-memory-server": "^8.11.4",
     "mongoose": "^6.8.4",
     "nodemon": "^2.0.13"
