--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test && mocha --recursive --exit",
-    "start": "nodemon index.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
     "lint-fix": "eslint --fix .  --ext .js",
     "lint": "eslint --fix .  --ext .js",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|json)\"",
@@ -27,7 +28,7 @@
     "chai": "^4.3.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.34.0",
-    "eslint-config-google": "^0.14.0",
+    "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-node": "11.1.0",
     "mocha": "^10.2.0",
