--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -63,7 +63,7 @@ services:
     environment:
       - MONGO_USERNAME=root
       - MONGO_PASSWORD=example
-      - MONGO_HOSTNAME=host.docker.internal
+      - MONGO_HOSTNAME=mymongodb
       - MONGO_PORT=27017
       - MONGO_DATABASE_NAME=task-management
 
@@ -90,7 +90,7 @@ services:
       - ./frontend:/frontend
 
     environment:
-      - REACT_APP_SERVER_BASE=http://localhost
+      - REACT_APP_SERVER_BASE=http://backend
       - REACT_APP_SERVER_PORT=8080
 
     # This creates interactive mode which lets us execute commands in a shell when the container is running.
