--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,23 +14,23 @@ stages:
 services:
   - mongo:latest
 
-# lint_server:
-#   stage: lint
-#   script:
-#     - cd ./backend
-#     - npm install
-#     - npm run validate # runs the validate script in package.json to format and lint the code
-#   allow_failure: false
+lint_server:
+  stage: lint
+  script:
+    - cd ./backend
+    - npm install
+    - npm run validate # runs the validate script in package.json to format and lint the code
+  allow_failure: false
 
-# test_server:
-#   stage: test
-#   script:
-#     - cd ./backend
-#     - npm install
-#     - npm run test # runs the test script in package.json to run the tests
-#   dependencies:
-#     - lint_server
-#   allow_failure: false
+test_server:
+  stage: test
+  script:
+    - cd ./backend
+    - npm install
+    - npm run test # runs the test script in package.json to run the tests
+  dependencies:
+    - lint_server
+  allow_failure: false
 
 build-staging-frontend:
   stage: staging
@@ -52,10 +52,10 @@ build-staging-frontend:
   # We only want this job to run when we push to the staging branch otherwise we never run this
   # Once the job is completed, the docker images will be pushed to the gitlab registry which can be found
   # under Packages & Registries -> Container Registry: https://gitlab.socs.uoguelph.ca/3760W23/demogroup/three_container_stack/container_registry/
-  # rules:
-  #   - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
-  #     when: always
-  #   - when: never
+  rules:
+    - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
+      when: always
+    - when: never
 
 # Similar to the frontend job, we will be building the backend docker image
 build-staging-backend:
@@ -70,10 +70,10 @@ build-staging-backend:
       --destination "${CI_REGISTRY_IMAGE}/backend:staging"
   allow_failure: false
   dependencies: []
-  # rules:
-  #   - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
-  #     when: always
-  #   - when: never
+  rules:
+    - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
+      when: always
+    - when: never
 
 build-staging-mongo:
   stage: staging
@@ -87,10 +87,10 @@ build-staging-mongo:
       --destination "${CI_REGISTRY_IMAGE}/mongo:staging"
   allow_failure: false
   dependencies: []
-  # rules:
-  #   - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
-  #     when: always
-  #   - when: never
+  rules:
+    - if: $CI_COMMIT_BRANCH == "staging" && $CI_PIPELINE_SOURCE == "push"
+      when: always
+    - when: never
 
 # We will create a similar setup for a production branch
 build-production-frontend:
