--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test && mocha --recursive --exit",
+    "testBackend": "mocha --recursive",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "lint-fix": "eslint --fix .  --ext .js",
