--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -92,6 +92,8 @@ services:
     environment:
       - REACT_APP_SERVER_BASE=http://backend
       - REACT_APP_SERVER_PORT=8080
+      - REACT_APP_LOCAL_API=http://localhost:8080
+      - REACT_APP_NONLOCAL_API=/api
 
     # This creates interactive mode which lets us execute commands in a shell when the container is running.
     stdin_open: true
