--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=test && mocha --recursive --exit  --timeout 100000",
-    "testBackend": "mocha --recursive  --timeout 100000",
+    "testBackend": "nyc mocha --recursive  --exit --timeout 100000",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "lint-fix": "eslint --fix .  --ext .js",
@@ -23,7 +23,8 @@
     "express": "^4.18.2",
     "mongodb-memory-server": "^8.11.4",
     "mongoose": "^6.8.4",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "nyc": "^15.1.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
